--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,5 @@ pyproj==1.9.5.1
 scrapy==1.5.0
 gunicorn==19.7.1
 flask-cors==3.0.3
+gevent==1.3.5
 git+https://github.com/lechup/imposm-parser.git@python3
