--- a/openpoiservice/server/categories/categories.yml
+++ b/openpoiservice/server/categories/categories.yml
@@ -403,6 +403,11 @@ transport:
             halt: 597
             station: 604
             tram_stop: 605
+        public_transport:
+            platform: 607
+            stop_position: 608
+            stop_area: 609
+            station: 610
 
 tourism:
     id: 620
