--- a/openpoiservice/server/ops_settings.yml
+++ b/openpoiservice/server/ops_settings.yml
@@ -18,10 +18,11 @@ provider_parameters:
   table_name: ops_planet_pois
   db_name: gis
   user_name: gis_admin
+  table_schema: public
   #user_name: admin
   password: admin
   host: localhost
-  port: 5432
+  port: 5434
   port_tests: 5432
 # add any additional tags you want to save to the database
 column_mappings:
