--- a/requirements.txt
+++ b/requirements.txt
@@ -3,16 +3,16 @@ Flask==0.12.2
 Flask-DebugToolbar==0.10.1
 Flask-SQLAlchemy==2.3.2
 Flask-Testing==0.6.2
-psycopg2==2.7.3.2
+psycopg2-binary==2.8.2
 PyYAML==3.12
 GeoAlchemy2==0.4.2
 voluptuous==0.10.5
 geojson==2.3.0
 shapely==1.6.4
 flasgger==0.8.1
-pyproj==1.9.5.1
+pyproj==2.1.3
 scrapy==1.5.0
 gunicorn==19.7.1
 flask-cors==3.0.3
 gevent==1.3.5
-git+https://github.com/lechup/imposm-parser.git@python3
+git+https://github.com/timmccauley/imposm-parser.git@python3
