--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
   volumes:
   - ./osm:/deploy/app/osm
   - ./ops_settings_docker.yml:/deploy/app/openpoiservice/server/ops_settings.yml
+  - ./categories_docker.yml:/deploy/app/openpoiservice/server/categories/categories.yml
   ports:
    - "5000:5000"
   mem_limit: 28g
