--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,4 @@ gunicorn==19.7.1
 flask-cors==3.0.3
 gevent==1.3.5
 git+https://github.com/timmccauley/imposm-parser.git@python3
+werkzeug>=0.15,<1.0
