let's see what travis PG port is.. trying 5432

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,6 @@ python:
 services:
   - postgresql
 
-env:
-  global:
-    - PGPORT=5434
-
 addons:
   postgresql: "9.5"
   apt:
@@ -23,9 +19,10 @@ before_install:
 
 # database creation
 before_script:
-  - psql -c "CREATE DATABASE gis;" -U postgres -p 5434 -h localhost
-  - psql -c "CREATE USER gis_admin WITH PASSWORD 'admin';" -U postgres -p 5434 -h localhost
-  - psql -c 'CREATE EXTENSION postgis;' -U postgres -d gis -p 5434 -h localhost
+  - psql -c "\conninfo" -U postgres -h localhost
+  - psql -c "CREATE DATABASE gis;" -U postgres -h localhost
+  - psql -c "CREATE USER gis_admin WITH PASSWORD 'admin';" -U postgres -h localhost
+  - psql -c 'CREATE EXTENSION postgis;' -U postgres -d gis -h localhost
 
 install:
   - pip install -r requirements.txt
