multiprocess osm files with osmium; memory strategy is settable

--- a/openpoiservice/server/ops_settings.yml
+++ b/openpoiservice/server/ops_settings.yml
@@ -1,5 +1,7 @@
 --- 
 attribution: "openrouteservice.org | OpenStreetMap contributors"
+osmium_strategy: flex_mem  # see osmium settings here: https://osmcode.org/osmium-concepts/#list-of-map-index-classes
+concurrent_workers: 3  # recommended: available cores - 1
 maximum_categories: 5
 # meters
 maximum_search_radius_for_linestrings: 2000
@@ -11,18 +13,15 @@ maximum_area: 50000000
 maximum_linestring_length: 500000
 # limit of pois
 response_limit: 2000
-# amount of workers used for parsing the osm files
-concurrent_workers: 4
 # Database parameters
 provider_parameters:
   table_name: ops_planet_pois
   db_name: gis
-  user_name: gis_admin
+  user_name: admin
   table_schema: public
-  #user_name: admin
   password: admin
   host: localhost
-  port: 5434
+  port: 5432
   port_tests: 5432
 # add any additional tags you want to save to the database
 column_mappings:
