--- a/requirements.txt
+++ b/requirements.txt
@@ -15,5 +15,5 @@ scrapy==1.5.0
 gunicorn==19.7.1
 flask-cors==3.0.3
 gevent==1.3.5
-git+https://github.com/timmccauley/imposm-parser.git@python3
+osmium==2.15.4
 werkzeug>=0.15,<1.0
