--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,10 +25,12 @@ scrapy = "^1.5"
 gunicorn = "^20.0"
 flask-cors = "^3.0"
 osmium = "^2.15"
+# Pin werkzeug version until bug is fixed
 werkzeug = "0.16.1"
 
 [tool.poetry.dev-dependencies]
 coverage = "^5.0"
+tox = "^3.14.5"
 
 [build-system]
 requires = ["poetry>=0.12"]
