update gevent and gunicorn

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,8 +25,9 @@ scrapy = "^1.5"
 gunicorn = "^20.0"
 flask-cors = "^3.0"
 osmium = "^2.15"
-# Pin werkzeug version until bug is fixed
+# Pin werkzeug version until bug is fixed: https://github.com/jarus/flask-testing/issues/143
 werkzeug = "0.16.1"
+gevent = "^1.4.0"
 
 [tool.poetry.dev-dependencies]
 coverage = "^5.0"
