--- a/tox.ini
+++ b/tox.ini
@@ -5,5 +5,5 @@ isolated_build = true
 [testenv]
 commands =
     poetry install -v --no-root
-    python manage.py test
+    APP_SETTINGS=testing python manage.py test
 whitelist_externals = poetry
