--- a/conf/config.template.yml
+++ b/conf/config.template.yml
@@ -3,27 +3,21 @@ attribution: "openrouteservice.org | OpenStreetMap contributors"
 osmium_strategy: flex_mem  # see osmium settings here: https://osmcode.org/osmium-concepts/#list-of-map-index-classes
 concurrent_workers: 3  # recommended: available cores - 1
 maximum_categories: 5
-# meters
-maximum_search_radius_for_linestrings: 2000
-maximum_search_radius_for_points: 2000
-maximum_search_radius_for_polygons: 2000
-# square meters
-maximum_area: 50000000
-# meters
-maximum_linestring_length: 500000
-# limit of pois
-response_limit: 2000
-# Database parameters
+maximum_search_radius_for_linestrings: 2000  # meters
+maximum_search_radius_for_points: 2000  # meters
+maximum_search_radius_for_polygons: 2000  # meters
+maximum_area: 50000000  # square meters
+maximum_linestring_length: 500000  # meters
+response_limit: 2000  # limit of pois
 provider_parameters:
   table_name: ops_planet_pois
   db_name: gis
-  user_name: nilsnolde
+  user_name: gis_admin
   table_schema: public
-  password: Manchmal88
+  password: admin
   host: localhost
   port: 5432
-  port_tests: 5432
-# add any additional tags you want to save to the database
+# add or remove OSM keys you want to save to the database
 column_mappings:
   # https://wiki.openstreetmap.org/wiki/Key:name
   name:
