add setenv section to tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -5,5 +5,7 @@ isolated_build = true
 [testenv]
 commands =
     poetry install -v --no-root
-    APP_SETTINGS=testing python manage.py test
+    python manage.py test
+setenv =
+    APP_SETTINGS = testing
 whitelist_externals = poetry
